[bumpversion]
current_version = 0.0.1

[bumpversion:file:./cli/__init__.py]

[metadata]
name = cassandra-db-client-cli
description = Cassandra DB Client CLI
long_description = file: README.md
version = attr: cli.__version__
author = Eyad
author_email = eyadmshokry@gmail.com
keywords = Cassandra, DB, client, cli
url = TODO
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Client Libraries :: Python Modules

[options]
packages = find_namespace:
zip_safe = False
include_package_data = True
install_requires =
    click>=8.1.3
    cassandra-driver>=3.25.0
    PyYAML>=6.0

[options.packages.find]
include =
    cli
    cli.*

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    cassandra_cli = cli.__main__:cli
